WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69402
Input styles are unexpectedly shared regardless of required status difference.
https://bugs.webkit.org/show_bug.cgi?id=69402
Summary
Input styles are unexpectedly shared regardless of required status difference.
Kent Tamura
Reported
2011-10-05 00:04:54 PDT
http://code.google.com/p/chromium/issues/detail?id=98008
Attachments
Patch
(3.18 KB, patch)
2011-10-05 00:06 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.47 KB, patch)
2011-10-05 01:21 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-10-05 00:06:39 PDT
Created
attachment 109751
[details]
Patch
Daniel Bates
Comment 2
2011-10-05 00:59:25 PDT
Comment on
attachment 109751
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109751&action=review
This patch looks straightforward. I have some minor nits.
> LayoutTests/fast/css/pseudo-required-shared-expected.html:4 > +<input value=required style="color:red;"> > +<input value=optional>
Nit: For consistency with the style attribute, I suggest surrounding all attribute values with quotes: <input value="required" style="color:red"> <input value="optional">
> LayoutTests/fast/css/pseudo-required-shared.html:2 > +<!DOCTYPE html> > +<!-- There was a bug that styles are unexpectedly shared regardless of required status difference. -->
This isn't a valid HTML5 document as per section 8.1.2.4 <
http://dev.w3.org/html5/spec/Overview.html#optional-tags
> which states that "An html element's start tag may be omitted if the first thing inside the html element is not a comment.". That is, we need an <html> tag here since the first thing is a comment. For you consideration, you may want to make the markup closer resemble the form of a basic HTML document as described in section 1.8 of the HTML5 spec. <
http://dev.w3.org/html5/spec/Overview.html#a-quick-introduction-to-html
>.
> LayoutTests/fast/css/pseudo-required-shared.html:7 > +
Nit: Please remove this empty line as it doesn't seem to improve the readability of this markup given that we have exactly one CSS block.
> LayoutTests/fast/css/pseudo-required-shared.html:11 > +<input required value=required> > +<input value=optional>
Nit: I suggest surrounding attribute values in quotes so as to demarcate them from the rest of the markup.
Kent Tamura
Comment 3
2011-10-05 01:12:14 PDT
Daniel, thank you! I'll follow your comments and land the patch.
Kent Tamura
Comment 4
2011-10-05 01:21:03 PDT
Created
attachment 109759
[details]
Patch for landing
WebKit Review Bot
Comment 5
2011-10-05 02:24:40 PDT
Comment on
attachment 109759
[details]
Patch for landing Clearing flags on attachment: 109759 Committed
r96686
: <
http://trac.webkit.org/changeset/96686
>
WebKit Review Bot
Comment 6
2011-10-05 02:24:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug