Input styles are unexpectedly shared regardless of required status difference. https://bugs.webkit.org/show_bug.cgi?id=69402

Reviewed by Daniel Bates.

Source/WebCore:

Tests: fast/css/pseudo-required-shared.html

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::canShareStyleWithControl): Check the difference of required().

LayoutTests:

* fast/css/pseudo-required-shared-expected.html: Added.
* fast/css/pseudo-required-shared.html: Added.


Canonical link: https://commits.webkit.org/85447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96686 268f45cc-cd09-0410-ab3c-d52691b4dbfc